--- a/src/components/layouts/BasicLayout/Header/index.module.less
+++ b/src/components/layouts/BasicLayout/Header/index.module.less
@@ -7,13 +7,25 @@
   left: 0;
   right: 0;
   z-index: 250;
+
+  .wrapper {
+    margin: auto;
+    max-width: 1440px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
+  }
 }
 .icon {
-  scale: 2;
-  position: absolute;
-  right: 2rem;
-  top: 2rem;
   cursor: pointer;
+  transition: transform 0.2s ease-in;
+  &:hover {
+    transform: scale(1.1);
+  }
+  * {
+    transition: none;
+  }
 }
 .logo {
   display: flex;
@@ -28,9 +40,7 @@
 .header-container {
   height: 100%;
   display: flex;
-  padding: 0 2rem;
   user-select: none;
-  // align-items: center;
 }
 .tab-item {
   line-height: 5rem;
@@ -75,19 +85,23 @@
   flex-direction: row;
   @media screen and (min-width: 1100px) {
     gap: 1.8em;
+    margin-left: 2rem;
   }
-  margin-left: 2rem;
 }
 .tab-mobile {
   flex-direction: column;
-  position: relative;
-  padding: 0 4rem;
+  position: absolute;
+  width: 12.9rem;
   height: fit-content;
-  background-color: var(--juejin-background);
+  background-color: var(--juejin-item-background);
   box-shadow: 0 8px 24px rgb(81 87 103 / 16%);
-  // display: none;
-  left: -8rem;
   top: 5rem;
+  text-align: center;
+  padding: 0 4em;
+  left: -1em;
+  @media screen and (min-width: 568px) {
+    left: 6em;
+  }
 }
 .hidden {
   display: none;
